<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"

        android:textColor="@color/lt_gray_title_color"
        android:text="@string/address"
        android:textSize="16sp"
        />


    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/black"
        tools:text="address"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"

        android:textColor="@color/lt_gray_title_color"
        android:text="@string/phone"
        android:textSize="16sp"
        />


    <!--
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/black"
        tools:text="-"
        android:textSize="16sp"
        />
    -->

    <TextView
        android:id="@+id/site_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"

        android:textColor="@color/lt_gray_title_color"

        android:text="@string/site"
        android:textSize="16sp"
        />



    <TextView
        android:id="@+id/site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/black"
        android:autoLink="web"
        tools:text="-"
        android:textSize="16sp"
        />

</LinearLayout>