<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:fillViewport="true"
    >

    <LinearLayout
        android:id="@+id/body"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@android:id/text1"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/title"
            android:textSize="18sp"
            android:text="@string/about_team_title"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@android:id/text2"
            android:textSize="18sp"
            android:text="@string/about_1"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@android:id/text2"
            android:textSize="20sp"
            android:text="@string/about_2"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--android:textStyle="bold"-->
        <TextView
            android:id="@+id/phone"
            android:textSize="20sp"
            tools:text="123456"

            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="14dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>
